--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <body>
 <div id="wrapper">
     <h1>Note Scraper</h1>
-    <h2><i>If you can do this...the homework should be no problem.</i></h2>
+    <h2><i>Reddit/r/NotTheOnion Scraper</i></h2>
     <div id="articles">
         {{#each Article}}
             <p data-id="{{this._id}}">
