--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
             <p data-id="{{this._id}}">
                 {{this.title}}
             <br />
-                {{this.link}}
+                <a href="{{this.link}}"> {{this.link}} </a>
             </p>
         {{/each}}
     </div>
